<?xml version="1.0"?>
<package format="3">
  <name>omni_base_laser_sensors</name>
  <version>0.0.11</version>
  <description>omni_base-specific laser sensors launch and config files.</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <maintainer email="yue.erro@pal-robotics.com">Yue Erro</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>sick_tim</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <!--@TODO: https://index.ros.org/p/ira_laser_tools/github-iralabdisco-ira_laser_tools/#humble-->
  <!--<exec_depend>ira_laser_tools</exec_depend>-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
